removed the sidebar

--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ accentColor = "#ffcd00"
 hideMainMenu = false
 
 [params.sidebar]
-enable = true
+enable = false
 
 [params.widgets]
 header = ["breadcrumbs"]
